--- a/chat-app/frontend/src/pages/Login.css
+++ b/chat-app/frontend/src/pages/Login.css
@@ -1,10 +1,69 @@
 .login-container {
   display: grid;
+  font-family: "Inter, sans-serif" !important;
   height: 100vh;
   justify-content: center;
+  background: url("../assets/images/bg2.jpg");
   align-items: center;
+  background-size: cover;
+  background-position: center;
 }
 .logn-content {
-  border: 1px solid red;
+  width: 390px;
+  padding-top: 80px;
+  padding-left: 15px;
+  padding-right: 15px;
   text-align: center;
+}
+.profile-pic {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto 20px; /* center and space below */
+  border: 2px solid #ccc; /* optional border */
+}
+.email-input,
+.password-input {
+  background-color: white;
+  font-size: 1rem;
+  border-color: transparent;
+  border-radius: 25px;
+  width: 240px;
+  margin: auto;
+  height: 50px;
+  align-items: center;
+  justify-content: space-evenly;
+  display: flex;
+  margin-bottom: 15px;
+}
+form.login-form input:focus-visible {
+  outline: none !important;
+}
+
+form.login-form input {
+  border: none;
+  background-color: transparent;
+}
+form.login-form input::placeholder {
+  font-weight: 600;
+}
+.profile-pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* make it fill the circle without distortion */
+  display: block;
+}
+form.login-form svg {
+  color: #757575;
+}
+@media only screen and (max-width: 767px) {
+  .login-wlcm-msg h2 {
+    font-size: 19px;
+    text-transform: capitalize;
+  }
+  .profile-pic {
+    width: 90px;
+    height: 90px;
+  }
 }
